--- a/ReactProjetoRayana/package.json
+++ b/ReactProjetoRayana/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://vitorsantanajv.github.io/Projeto-Front-end",
+  "homepage": "https://vitorsantanajv.github.io/Projeto-Front-end/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
